--- a/WIT.Models/WIT.Models.csproj
+++ b/WIT.Models/WIT.Models.csproj
@@ -95,7 +95,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BindingModels\Warehouse\EntryAddBindingModel.cs" />
+    <Compile Include="BindingModels\Record\EntryAddBindingModel.cs" />
     <Compile Include="BindingModels\Warehouse\WarehouseAddBindingModel.cs" />
     <Compile Include="BindingModels\Warehouse\WarehouseEditBindingModel.cs" />
     <Compile Include="EntityModels\Comment.cs" />
@@ -121,7 +121,8 @@
     <Compile Include="ViewModels\Manage\ManageLoginsViewModel.cs" />
     <Compile Include="ViewModels\Manage\SetPasswordViewModel.cs" />
     <Compile Include="ViewModels\Manage\VerifyPhoneNumberViewModel.cs" />
-    <Compile Include="ViewModels\Warehouse\EntryAddViewModel.cs" />
+    <Compile Include="ViewModels\Record\EntryAddViewModel.cs" />
+    <Compile Include="ViewModels\Record\RecordListViewModel.cs" />
     <Compile Include="ViewModels\Warehouse\EntryListViewModel.cs" />
     <Compile Include="ViewModels\Warehouse\WarehouseAddViewModel.cs" />
     <Compile Include="ViewModels\Warehouse\WarehouseDetailedViewModel.cs" />
