--- a/WIT.App/WIT.App.csproj
+++ b/WIT.App/WIT.App.csproj
@@ -307,10 +307,9 @@
     <Content Include="Views\Records\_DisplayRecords.cshtml" />
     <Content Include="Views\User\All.cshtml" />
     <Content Include="Views\User\_DisplayUsers.cshtml" />
+    <Content Include="Views\User\AddComment.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.2.1.slim.min.map" />
