--- a/WIT.App/Web.config
+++ b/WIT.App/Web.config
@@ -92,7 +92,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="WitContext" connectionString="data source=HOME\SQLEXPRESS;initial catalog=WarehouseDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="WitContext" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=WarehouseDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
