--- a/WIT.Data/App.config
+++ b/WIT.Data/App.config
@@ -11,7 +11,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="WitContext" connectionString="data source=HOME\SQLEXPRESS;initial catalog=WarehouseDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="WitContext" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=WarehouseDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
